--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ step :
       publish-dir : ./
       github_token : {{secrets.GITHUB_TOKEN}}
 permissions:
-  content : write
+  contents : write
                                     
                                   
                       
