--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on :
 jobs : 
   deploy : 
     runs-on : ubuntu-latest
-step : 
+steps : 
   - name : Recup code 
     uses : actions/checkout@v4
   - name : Passe 2
