--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs :
       - name : Passe 2
         uses : peaceiris/actions-gh-pages@v3
         with : 
-          publish-dir : ./
+          publish_dir : ./
           github_token : ${{secrets.GITHUB_TOKEN}}
 permissions:
   contents : write
